# baron

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
baron/: baron.py  dumper.py  formatting_grouper.py  future.py  grammator.py  grammator_control_structures.py  grammator_data_structures.py  grammator_imports.py  grammator_operators.py  grammator_primitives.py  grouper.py  helpers.py  indentation_marker.py  inner_formatting_grouper.py  parser.py  path.py  render.py  spliter.py  token.py  tokenizer.py  utils.py
docs/: advanced.rst  basics.rst  conf.py  index.rst  technical.rst
tests/: conftest.py  test_baron.py  test_dumper.py  test_formatting_grouper.py  test_future.py  test_grammator.py  test_grammator_control_structures.py  test_grammator_data_structures.py  test_grammator_imports.py  test_grammator_operators.py  test_grammator_primitives.py  test_grouper.py  test_indentation_marker.py  test_inner_formatting_grouper.py  test_path.py  test_regression.py  test_render.py  test_spliter.py  test_tokenizer.py  test_utils.py
