[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baron"
version = "1.0.0"
description = "Full Syntax Tree for Python to make writing refactoring code a realistic task"
readme = "README.md"
license = "LGPL-3.0-or-later"
authors = [
    { name = "Laurent Peuch", email = "cortex@worlddomination.be" }
]
keywords = ["ast", "fst", "refactoring", "syntax", "tree"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.12"
dependencies = ["rply"]

[project.optional-dependencies]
docs = [
    "sphinx",
    "ipython",
]

[project.urls]
Homepage = "https://github.com/PyCQA/baron"
Repository = "https://github.com/PyCQA/baron"
Documentation = "https://baron.readthedocs.io"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "SIM108", "SIM105"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
